DTS-45930: reopen rate fieldmapping Change-log:Defect reopen rate as trend KPI in Quality board.